[gd_scene load_steps=77 format=3 uid="uid://dok7omvslwslh"]

[ext_resource type="Texture2D" uid="uid://tbudqra2lwtd" path="res://sprites/rooms/Witch Room Background.png" id="1_1boqs"]
[ext_resource type="Script" path="res://scripts/rooms/main_room.gd" id="1_gduad"]
[ext_resource type="Texture2D" uid="uid://dpswu4dev2ey5" path="res://sprites/rooms/Witch Room  Chair.png" id="2_rdds6"]
[ext_resource type="Texture2D" uid="uid://ce8vxmymrv247" path="res://sprites/rooms/Witch Room Cauldron.png" id="3_nlrpj"]
[ext_resource type="Texture2D" uid="uid://buobpqwpvvcba" path="res://sprites/rooms/Witch Room Light.png" id="4_5jpvh"]
[ext_resource type="Texture2D" uid="uid://cgdgvogxbj2n8" path="res://sprites/rooms/Witch Room Foreground.png" id="5_w5mfu"]
[ext_resource type="Script" path="res://scripts/Witch.gd" id="6_4gf8w"]
[ext_resource type="PackedScene" uid="uid://dvkqbwaa5ros2" path="res://scenes/gorp.tscn" id="6_e2cml"]
[ext_resource type="Texture2D" uid="uid://cwlt34s28s5sd" path="res://sprites/witch_animation/idle/1.png" id="7_ocjqv"]
[ext_resource type="Texture2D" uid="uid://bg5gwk185ych0" path="res://sprites/witch_animation/idle/2.png" id="8_bt6qv"]
[ext_resource type="Texture2D" uid="uid://bov4uujg6h2yh" path="res://sprites/witch_animation/idle/3.png" id="9_6tgjt"]
[ext_resource type="Texture2D" uid="uid://c0nhr1sosyf3t" path="res://sprites/witch_animation/idle/4.png" id="10_qd70h"]
[ext_resource type="Texture2D" uid="uid://c4sl8cdfm85mq" path="res://sprites/witch_animation/idle/5.png" id="11_mk7fq"]
[ext_resource type="Texture2D" uid="uid://dme04td6vp0p2" path="res://sprites/witch_animation/idle/6.png" id="12_x7qct"]
[ext_resource type="Texture2D" uid="uid://cmqjxoh8gx6a5" path="res://sprites/witch_animation/idle/7.png" id="13_g8yej"]
[ext_resource type="Texture2D" uid="uid://dbpr0snfq40o7" path="res://sprites/witch_animation/idle/8.png" id="14_vew0h"]
[ext_resource type="Texture2D" uid="uid://bgqtavpudadx3" path="res://sprites/witch_animation/idle/9.png" id="15_awywd"]
[ext_resource type="Texture2D" uid="uid://be1fiaj1mgail" path="res://sprites/witch_animation/idle/10.png" id="16_bikci"]
[ext_resource type="Texture2D" uid="uid://cobfy1foc5t1y" path="res://sprites/witch_animation/idle/12.png" id="17_dt4mn"]
[ext_resource type="Texture2D" uid="uid://dy6rou4nq57kn" path="res://sprites/witch_animation/idle/13.png" id="18_lgb74"]
[ext_resource type="Texture2D" uid="uid://dkkygwm164rps" path="res://sprites/witch_animation/idle/14.png" id="19_0weio"]
[ext_resource type="Texture2D" uid="uid://1f0h3dsgu2x3" path="res://sprites/witch_animation/idle/15.png" id="20_nxyow"]
[ext_resource type="Texture2D" uid="uid://be060ego3ta4v" path="res://sprites/witch_animation/idle/16.png" id="21_uiroi"]
[ext_resource type="Texture2D" uid="uid://clqlre5bw2g10" path="res://sprites/witch_animation/idle/17.png" id="22_iaeji"]
[ext_resource type="Texture2D" uid="uid://d3snbkgh8ikiw" path="res://sprites/witch_animation/idle/18.png" id="23_5o5h6"]
[ext_resource type="Texture2D" uid="uid://qvcox738jddg" path="res://sprites/witch_animation/idle/19.png" id="24_b8akg"]
[ext_resource type="Texture2D" uid="uid://3y52r84iixap" path="res://sprites/witch_animation/idle/20.png" id="25_v7jff"]
[ext_resource type="Texture2D" uid="uid://brtmm0ktcwdrk" path="res://sprites/witch_animation/idle/21.png" id="26_lvr3r"]
[ext_resource type="Texture2D" uid="uid://cvxl6rwl7jm2g" path="res://sprites/witch_animation/idle/22.png" id="27_5unse"]
[ext_resource type="Texture2D" uid="uid://ccg75nkegxee5" path="res://sprites/witch_animation/idle/23.png" id="28_8ykqo"]
[ext_resource type="Texture2D" uid="uid://ckqjspp0mg2ea" path="res://sprites/witch_animation/idle/24.png" id="29_avkvt"]
[ext_resource type="Texture2D" uid="uid://b40swikbb8drr" path="res://sprites/witch_animation/idle/25.png" id="30_qdjds"]
[ext_resource type="Texture2D" uid="uid://c1kp5fxbif4ij" path="res://sprites/witch_animation/idle/26.png" id="31_acf4j"]
[ext_resource type="Texture2D" uid="uid://cpht1453ir3jx" path="res://sprites/witch_animation/idle/27.png" id="32_p35bv"]
[ext_resource type="Texture2D" uid="uid://c0o85aoc583dr" path="res://sprites/witch_animation/idle/28.png" id="33_yvlhb"]
[ext_resource type="Texture2D" uid="uid://cl0wmjlo1a3em" path="res://sprites/witch_animation/idle/29.png" id="34_bgqeb"]
[ext_resource type="Texture2D" uid="uid://bm0phmruc23yn" path="res://sprites/witch_animation/idle/30.png" id="35_64iy4"]
[ext_resource type="Texture2D" uid="uid://od0b8q5bmbor" path="res://sprites/witch_animation/idle/31.png" id="36_bj1ia"]
[ext_resource type="Texture2D" uid="uid://bos1cihbmqtpv" path="res://sprites/witch_animation/idle/32.png" id="37_yn6rv"]
[ext_resource type="Texture2D" uid="uid://boj7fd4urunje" path="res://sprites/witch_animation/idle/33.png" id="38_8st8s"]
[ext_resource type="Texture2D" uid="uid://dwaqrb7ukpiph" path="res://sprites/witch_animation/idle/34.png" id="39_m7088"]
[ext_resource type="Texture2D" uid="uid://0lc4cywfy5ux" path="res://sprites/witch_animation/idle/35.png" id="40_nqqbs"]
[ext_resource type="Texture2D" uid="uid://dlhlp6xdr5w2w" path="res://sprites/witch_animation/sneeze/1.png" id="41_1qggd"]
[ext_resource type="Texture2D" uid="uid://dq7081jgnlayj" path="res://sprites/witch_animation/sneeze/2.png" id="42_rigok"]
[ext_resource type="Texture2D" uid="uid://qcfs16coip2o" path="res://sprites/witch_animation/sneeze/3.png" id="43_ikyq6"]
[ext_resource type="Texture2D" uid="uid://clxkn074ar6l" path="res://sprites/witch_animation/sneeze/4.png" id="44_qru8a"]
[ext_resource type="Texture2D" uid="uid://bx0kl572p00xd" path="res://sprites/witch_animation/sneeze/5.png" id="45_bhrsq"]
[ext_resource type="Texture2D" uid="uid://dev0uv5234huq" path="res://sprites/witch_animation/sneeze/6.png" id="46_odrkw"]
[ext_resource type="Texture2D" uid="uid://dy20dpvy7ystt" path="res://sprites/witch_animation/sneeze/7.png" id="47_x385r"]
[ext_resource type="Texture2D" uid="uid://dyerws5wrkqgf" path="res://sprites/witch_animation/sneeze/8.png" id="48_44tq4"]
[ext_resource type="Texture2D" uid="uid://t5mre12k0mhc" path="res://sprites/rooms/Witch Room Cauldron Ladder.png" id="49_170iq"]
[ext_resource type="PackedScene" uid="uid://c4ymqblc6s0mc" path="res://scenes/platforms/thin_haunted.tscn" id="50_83mad"]
[ext_resource type="Script" path="res://scripts/cauldron.gd" id="50_xyctv"]
[ext_resource type="PackedScene" uid="uid://bo8hgahl1785t" path="res://scenes/item_scenes/catmint.tscn" id="52_fb3xc"]
[ext_resource type="PackedScene" uid="uid://61jiqhynx030" path="res://scenes/item_scenes/lemon.tscn" id="55_438ba"]
[ext_resource type="Texture2D" uid="uid://ckb82v68a6mjx" path="res://sprites/witch_animation/thoughtbubble/3.png" id="55_rxy7u"]
[ext_resource type="PackedScene" uid="uid://dm767qp3txh34" path="res://scenes/item_scenes/tea.tscn" id="55_w3uy7"]
[ext_resource type="Texture2D" uid="uid://eeoqyg4grk5g" path="res://sprites/items/Tea Leaf.png" id="56_pd2ra"]
[ext_resource type="Script" path="res://scenes/rooms/TeaThought.gd" id="56_s8ev3"]
[ext_resource type="Texture2D" uid="uid://b0a24ub7o6vbb" path="res://sprites/items/Catmint Berry.png" id="57_sjbry"]
[ext_resource type="Texture2D" uid="uid://derp0khjsce2m" path="res://sprites/items/Haunted Ginger.png" id="58_l7pxy"]
[ext_resource type="Texture2D" uid="uid://b4nan1vsp3rjm" path="res://sprites/items/Hot Pepper.png" id="59_gvqpq"]
[ext_resource type="Texture2D" uid="uid://nxu3ldtbu3pa" path="res://sprites/items/Lemon Battery.png" id="60_rpod4"]
[ext_resource type="Texture2D" uid="uid://cy1sx6ny5j0xe" path="res://sprites/items/Tail-cicle.png" id="61_msa6e"]
[ext_resource type="Texture2D" uid="uid://eighsxjcdtbt" path="res://sprites/items/mug.png" id="62_f4taf"]
[ext_resource type="PackedScene" uid="uid://dc2by18wc4iyb" path="res://scenes/scene_changer.tscn" id="65_3av0d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l55qc"]
size = Vector2(767.5, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdt75"]
size = Vector2(2565.5, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wygjk"]
size = Vector2(2565.5, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dusno"]
size = Vector2(49.0328, 115.488)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xd6r1"]
size = Vector2(7.71023, 115.488)

[sub_resource type="SpriteFrames" id="SpriteFrames_4w0k6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ocjqv")
}, {
"duration": 1.0,
"texture": ExtResource("8_bt6qv")
}, {
"duration": 1.0,
"texture": ExtResource("9_6tgjt")
}, {
"duration": 1.0,
"texture": ExtResource("10_qd70h")
}, {
"duration": 1.0,
"texture": ExtResource("11_mk7fq")
}, {
"duration": 1.0,
"texture": ExtResource("12_x7qct")
}, {
"duration": 1.0,
"texture": ExtResource("13_g8yej")
}, {
"duration": 1.0,
"texture": ExtResource("14_vew0h")
}, {
"duration": 1.0,
"texture": ExtResource("15_awywd")
}, {
"duration": 1.0,
"texture": ExtResource("16_bikci")
}, {
"duration": 1.0,
"texture": ExtResource("17_dt4mn")
}, {
"duration": 1.0,
"texture": ExtResource("18_lgb74")
}, {
"duration": 1.0,
"texture": ExtResource("19_0weio")
}, {
"duration": 1.0,
"texture": ExtResource("20_nxyow")
}, {
"duration": 1.0,
"texture": ExtResource("21_uiroi")
}, {
"duration": 1.0,
"texture": ExtResource("22_iaeji")
}, {
"duration": 1.0,
"texture": ExtResource("23_5o5h6")
}, {
"duration": 1.0,
"texture": ExtResource("24_b8akg")
}, {
"duration": 1.0,
"texture": ExtResource("25_v7jff")
}, {
"duration": 1.0,
"texture": ExtResource("26_lvr3r")
}, {
"duration": 1.0,
"texture": ExtResource("27_5unse")
}, {
"duration": 1.0,
"texture": ExtResource("28_8ykqo")
}, {
"duration": 1.0,
"texture": ExtResource("29_avkvt")
}, {
"duration": 1.0,
"texture": ExtResource("30_qdjds")
}, {
"duration": 1.0,
"texture": ExtResource("31_acf4j")
}, {
"duration": 1.0,
"texture": ExtResource("32_p35bv")
}, {
"duration": 1.0,
"texture": ExtResource("33_yvlhb")
}, {
"duration": 1.0,
"texture": ExtResource("34_bgqeb")
}, {
"duration": 1.0,
"texture": ExtResource("35_64iy4")
}, {
"duration": 1.0,
"texture": ExtResource("36_bj1ia")
}, {
"duration": 1.0,
"texture": ExtResource("37_yn6rv")
}, {
"duration": 1.0,
"texture": ExtResource("38_8st8s")
}, {
"duration": 1.0,
"texture": ExtResource("39_m7088")
}, {
"duration": 1.0,
"texture": ExtResource("40_nqqbs")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_1qggd")
}, {
"duration": 1.0,
"texture": ExtResource("42_rigok")
}, {
"duration": 1.0,
"texture": ExtResource("43_ikyq6")
}, {
"duration": 1.0,
"texture": ExtResource("44_qru8a")
}, {
"duration": 1.0,
"texture": ExtResource("45_bhrsq")
}, {
"duration": 1.0,
"texture": ExtResource("46_odrkw")
}, {
"duration": 1.0,
"texture": ExtResource("47_x385r")
}, {
"duration": 1.0,
"texture": ExtResource("48_44tq4")
}],
"loop": true,
"name": &"sneeze",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_tj3ja"]
resource_name = "RESET"
loop_mode = 1
step = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"idle", &"idle"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_2t3b6"]
resource_name = "sneeze"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"sneeze", &"idle"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["RESET"],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sod4p"]
_data = {
"RESET": SubResource("Animation_tj3ja"),
"sneeze": SubResource("Animation_2t3b6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji4ch"]
size = Vector2(447, 378.25)

[node name="MainRoom" type="Node2D"]
script = ExtResource("1_gduad")

[node name="WitchRoomBackground" type="Sprite2D" parent="."]
position = Vector2(1282, 723)
texture = ExtResource("1_1boqs")

[node name="WitchRoomChair" type="Sprite2D" parent="."]
position = Vector2(1280, 724)
texture = ExtResource("2_rdds6")

[node name="Wall3" type="RigidBody2D" parent="WitchRoomChair"]
position = Vector2(926, -758)
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WitchRoomChair/Wall3"]
position = Vector2(-1227, 1128)
shape = SubResource("RectangleShape2D_l55qc")
one_way_collision = true

[node name="WitchRoomLight" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1292, 719)
texture = ExtResource("4_5jpvh")

[node name="WitchRoomForeground" type="Sprite2D" parent="."]
visibility_layer = 2
z_index = 5
position = Vector2(1281, 723)
texture = ExtResource("5_w5mfu")

[node name="Ground" type="RigidBody2D" parent="."]
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(1283.25, 1374.5)
shape = SubResource("RectangleShape2D_sdt75")

[node name="Ground2" type="RigidBody2D" parent="."]
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(1283.25, 1374.5)
shape = SubResource("RectangleShape2D_wygjk")

[node name="Wall" type="RigidBody2D" parent="."]
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(305.5, 711.325)
scale = Vector2(12.665, 12.665)
shape = SubResource("RectangleShape2D_dusno")

[node name="Wall2" type="RigidBody2D" parent="."]
position = Vector2(2206, -34)
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(300, 736)
scale = Vector2(12.665, 12.665)
shape = SubResource("RectangleShape2D_xd6r1")

[node name="Witch" type="Node2D" parent="."]
position = Vector2(555, 682)
scale = Vector2(0.29, 0.29)
script = ExtResource("6_4gf8w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Witch"]
position = Vector2(1296.55, 396.552)
sprite_frames = SubResource("SpriteFrames_4w0k6")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Witch"]
libraries = {
"": SubResource("AnimationLibrary_sod4p")
}

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("50_xyctv")

[node name="WitchRoomCauldron" type="Sprite2D" parent="Area2D"]
visibility_layer = 2
position = Vector2(1281, 720)
texture = ExtResource("3_nlrpj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(433.5, 936.875)
shape = SubResource("RectangleShape2D_ji4ch")

[node name="WitchRoomCauldronLadder" type="Sprite2D" parent="."]
position = Vector2(1381.05, 381.032)
rotation = -0.307178
scale = Vector2(1.33257, 1.33257)
texture = ExtResource("49_170iq")

[node name="Thin5" parent="WitchRoomCauldronLadder" instance=ExtResource("50_83mad")]
visible = false
position = Vector2(-545.554, 446.507)
rotation = -2.15723
scale = Vector2(2.075, 1.225)

[node name="catmint" parent="." instance=ExtResource("52_fb3xc")]
position = Vector2(1141, 1558)
scale = Vector2(2.02, 2.02)

[node name="Gorp" parent="." instance=ExtResource("6_e2cml")]
position = Vector2(772, 1021)
scale = Vector2(0.2, 0.2)

[node name="Camera2D" type="Camera2D" parent="Gorp"]
position = Vector2(-90, 90)
scale = Vector2(5, 5)
zoom = Vector2(0.8, 0.8)
limit_left = 0
limit_top = 0
limit_right = 2560
limit_bottom = 1400
limit_smoothed = true
position_smoothing_enabled = true

[node name="lemon" parent="." instance=ExtResource("55_438ba")]
position = Vector2(1432, 1567)

[node name="Entry" type="Node2D" parent="."]
position = Vector2(1582, 1251)

[node name="tea" parent="." instance=ExtResource("55_w3uy7")]
position = Vector2(1313, 1562)

[node name="TeaThought" type="Sprite2D" parent="."]
position = Vector2(1303, 722)
scale = Vector2(0.37244, 0.372439)
texture = ExtResource("55_rxy7u")
script = ExtResource("56_s8ev3")

[node name="TeaLeaf" type="Sprite2D" parent="TeaThought"]
position = Vector2(13.425, -67.125)
scale = Vector2(2.685, 2.685)
texture = ExtResource("56_pd2ra")

[node name="CatmintBerry" type="Sprite2D" parent="TeaThought"]
position = Vector2(18.7951, 115.455)
scale = Vector2(1.54853, 1.54853)
texture = ExtResource("57_sjbry")

[node name="HauntedGinger" type="Sprite2D" parent="TeaThought"]
position = Vector2(-268.5, 29.5349)
scale = Vector2(1.28901, 1.28901)
texture = ExtResource("58_l7pxy")

[node name="HotPepper" type="Sprite2D" parent="TeaThought"]
position = Vector2(330.255, 34.9047)
scale = Vector2(0.914457, 0.914457)
texture = ExtResource("59_gvqpq")

[node name="LemonBattery" type="Sprite2D" parent="TeaThought"]
position = Vector2(193.32, -177.21)
scale = Vector2(1.00965, 1.00965)
texture = ExtResource("60_rpod4")

[node name="Tail-cicle" type="Sprite2D" parent="TeaThought"]
position = Vector2(-77.865, -150.36)
scale = Vector2(1.17727, 1.17727)
texture = ExtResource("61_msa6e")

[node name="Mug" type="Sprite2D" parent="TeaThought"]
position = Vector2(21.48, -34.905)
scale = Vector2(2.685, 2.685)
texture = ExtResource("62_f4taf")

[node name="SceneChanger" parent="." instance=ExtResource("65_3av0d")]
position = Vector2(1673, 1252)
target_scene = "res://scenes/rooms/tower.tscn"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
